# dsnd-pipelines-project

./: README.md  pyproject.toml  requirements.txt
starter/: review_modell.ipynb
