[project]
name = "dsnd-pipelines-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "transformers>=4.55.4",
]
